--- a/alpha/home/templates/home.html
+++ b/alpha/home/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}CityFusion.com{% endblock %}
+{% block title %}Cityfusion{% endblock %}
 
 {% block page %}
 
