--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -61,14 +61,15 @@ table {
 
 
 
-html { background: url('/static/img/bg.png') repeat-x 0 0; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 13px; }
+html { background: url('img/bg.png') repeat-x 0 0; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 13px; }
+html.browse { background: url('img/bg-browse.png') repeat-x 0 0; }
 .wrapper { position: relative; width: 940px; margin: 0 auto; }
 
 a { color: #343796; text-decoration: none; }
 a:hover { text-decoration: underline; }
 
 #header { height: 77px; position: relative; }
-#header h1 { position: absolute; top: 13px; left: 0px; width: 187px; height: 50px; background: url('/static/img/logo.png') no-repeat 7px 7px; text-indent: -9999px; }
+#header h1 { position: absolute; top: 13px; left: 0px; width: 187px; height: 50px; background: url('img/logo.png') no-repeat 7px 7px; text-indent: -9999px; }
 #header h1 a { display: block; height: 100%; outline: 0;  text-shadow: -1px -1px 0 #202265;  }
 #header h2 { text-indent: -9999px; }
 
@@ -78,7 +79,7 @@ a:hover { text-decoration: underline; }
 #main-nav { position: absolute; top: 21px; left: 205px; float: left; }
 #main-nav li { height: 37px; width: 131px; }
 #main-nav a { display: block; height: 37px; width: 93px; line-height: 38px; padding: 0 19px; }
-#main-nav a.current { background: url('/static/img/nav-bg.png') no-repeat 0 0; text-shadow: 0 0 2px #babbd5; }
+#main-nav a.current { background: url('img/nav-bg.png') no-repeat 0 0; text-shadow: 0 0 2px #babbd5; }
 #main-nav a.current:hover { text-decoration: none; }
 #main-nav a.post { margin-left: 4px; }
 #main-nav a.post.current { margin: 0; padding: 0 23px; }
@@ -98,10 +99,10 @@ a:hover { text-decoration: underline; }
 #city-widget a { color: #ffebac; }
 #city-widget .white { color: #fff; }
 
-#date-nav { height: 40px; padding-left: 97px; background: url('/static/img/see-events-for.png') no-repeat 9px 50%; font-size: 12px; }
+#date-nav { height: 40px; padding-left: 97px; background: url('img/see-events-for.png') no-repeat 9px 50%; font-size: 12px; }
 #date-nav li { float: left; }
 #date-nav a { display: block; height: 40px; padding: 0 13px; color: #3c3d76; cursor: pointer; font-weight: bold; line-height: 41px; }
-#date-nav a.jump, #date-nav a.jump:hover { background: url('/static/img/calendar.png') no-repeat 13px -29px; padding: 0 13px 0 34px; }
+#date-nav a.jump, #date-nav a.jump:hover { background: url('img/calendar.png') no-repeat 13px -29px; padding: 0 13px 0 34px; }
 #date-nav a:hover { background-color: #fbfaf6 !important; border-bottom: 2px solid #fff; height: 38px; text-decoration: none; }
 #date-nav a.current { background-color: #fff !important; }
 
@@ -110,7 +111,7 @@ a:hover { text-decoration: underline; }
 #tags { width: 140px; margin: 20px 10px 0 0; float: left; font-size: 12px; }
 #tags li { height: 27px; margin-bottom: 1px; }
 #tags a { display: block; height: 27px; padding-left: 9px; border-radius: 3px; font-weight: bold; line-height: 27px; }
-#tags a.active, #tags a:hover { background: #343796 url('/static/img/tag-icons.png') no-repeat 120px 6px; color: #fff; text-decoration: none; }
+#tags a.active, #tags a:hover { background: #343796 url('img/tag-icons.png') no-repeat 120px 6px; color: #fff; text-decoration: none; }
 #tags a.active { background-position: 120px -31px; }
 #tags a.active:hover { background-position: 120px -68px; }
 #tags li:first-child { padding-bottom: 2px; border-bottom: 1px solid #ccc; margin-bottom: 2px; }
@@ -143,13 +144,11 @@ a:hover { text-decoration: underline; }
 
 .detail ul { margin: -5px 0 15px; overflow: hidden; }
 .detail ul.tags { margin: 30px 0 0; }
-.detail ul.tags li { background: url('/static/img/icons.png') no-repeat 0 1px; }
+.detail ul.tags li { background: url('img/icons.png') no-repeat 0 1px; }
 .detail li { float: left; width: 178px; padding-left: 22px; height: 40px; line-height: 16px; }
-.detail .date { background: url('/static/img/icons.png') no-repeat 0 -62px; }
-.detail .loc { background: url('/static/img/icons.png') no-repeat 0 -124px; }
-.detail .price { background: url('/static/img/icons.png') no-repeat 0 -186px; }
-
-
+.detail .date { background: url('img/icons.png') no-repeat 0 -62px; }
+.detail .loc { background: url('img/icons.png') no-repeat 0 -124px; }
+.detail .price { background: url('img/icons.png') no-repeat 0 -186px; }
 
 .body h1 { font-size: 20px; font-weight: bold; margin: 25px 0; }
 .small { color: #999; font-size: 11px; }
@@ -167,7 +166,7 @@ input.text, textarea, form input.othertext, select { height: 18px; margin: 0 0 2
 input.wide, textarea.wide { width: 400px; }
 input.othertext { height: 14px; margin-left: 7px; width: 200px; }
 input.file { margin-top: 8px; }
-input.date { background: #f9f9f9 url('/static/img/calendar.png') no-repeat 131px 8px; width: 140px; }
+input.date { background: #f9f9f9 url('img/calendar.png') no-repeat 131px 8px; width: 140px; }
 select { height: 32px; width: 100px; margin-left: 8px; background: #fff; border-radius: 0px; font-size: 12px; vertical-align: top; }
 textarea { height: 75px; }
 
