--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -61,25 +61,24 @@ table {
 
 
 
-html { background: url('img/bg.png') repeat-x 0 0; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 13px; }
-html.browse { background: url('img/bg-browse.png') repeat-x 0 0; }
+html { background: url('../img/bg-browse.png') repeat-x 0 0; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 13px; }
+html.browse { background: url('../img/bg.png') repeat-x 0 0; }
 .wrapper { position: relative; width: 940px; margin: 0 auto; }
 
 a { color: #343796; text-decoration: none; }
 a:hover { text-decoration: underline; }
 
-#header { height: 77px; position: relative; }
-#header h1 { position: absolute; top: 13px; left: 0px; width: 187px; height: 50px; background: url('img/logo.png') no-repeat 7px 7px; text-indent: -9999px; }
+#header { position: relative; height: 77px; }
+#header h1 { position: absolute; top: 13px; left: 0px; width: 187px; height: 50px; background: url('../img/logo.png') no-repeat 7px 7px; text-indent: -9999px; }
 #header h1 a { display: block; height: 100%; outline: 0;  text-shadow: -1px -1px 0 #202265;  }
 #header h2 { text-indent: -9999px; }
-
 #header li { float: left; }
 #header a { color: #fff; font-weight: bold; }
 
 #main-nav { position: absolute; top: 21px; left: 205px; float: left; }
 #main-nav li { height: 37px; width: 131px; }
-#main-nav a { display: block; height: 37px; width: 93px; line-height: 38px; padding: 0 19px; }
-#main-nav a.current { background: url('img/nav-bg.png') no-repeat 0 0; text-shadow: 0 0 2px #babbd5; }
+#main-nav a { display: block; height: 37px; width: 93px; padding: 0 19px; line-height: 38px; }
+#main-nav a.current { background: url('../img/nav-bg.png') no-repeat 0 0; text-shadow: 0 0 2px #babbd5; }
 #main-nav a.current:hover { text-decoration: none; }
 #main-nav a.post { margin-left: 4px; }
 #main-nav a.post.current { margin: 0; padding: 0 23px; }
@@ -95,15 +94,15 @@ a:hover { text-decoration: underline; }
 
 #city-widget { display: none; position: absolute; width: 210px; min-height: 1px; top: 73px; right: 23px; padding: 10px 20px; background: #393c97; border-radius: 3px; box-shadow: 1px 1px 0 #000; color: #d7d8eb; font-size: 12px; font-weight: bold; }
 #city-widget.active { display: block; }
-#city-widget p { line-height: 1.4em; margin: 1em 0; text-shadow: -1px -1px 0 #202265; }
+#city-widget p { margin: 1em 0; line-height: 1.4em; text-shadow: -1px -1px 0 #202265; }
 #city-widget a { color: #ffebac; }
 #city-widget .white { color: #fff; }
 
-#date-nav { height: 40px; padding-left: 97px; background: url('img/see-events-for.png') no-repeat 9px 50%; font-size: 12px; }
+#date-nav { height: 40px; padding-left: 97px; background: url('../img/see-events-for.png') no-repeat 9px 50%; font-size: 12px; }
 #date-nav li { float: left; }
 #date-nav a { display: block; height: 40px; padding: 0 13px; color: #3c3d76; cursor: pointer; font-weight: bold; line-height: 41px; }
-#date-nav a.jump, #date-nav a.jump:hover { background: url('img/calendar.png') no-repeat 13px -29px; padding: 0 13px 0 34px; }
-#date-nav a:hover { background-color: #fbfaf6 !important; border-bottom: 2px solid #fff; height: 38px; text-decoration: none; }
+#date-nav a.jump, #date-nav a.jump:hover { padding: 0 13px 0 34px; background: url('../img/calendar.png') no-repeat 13px -29px; }
+#date-nav a:hover { height: 38px; background-color: #fbfaf6 !important; border-bottom: 2px solid #fff; text-decoration: none; }
 #date-nav a.current { background-color: #fff !important; }
 
 #main { overflow: hidden; width: 940px; padding: 10px 0 60px; }
@@ -111,12 +110,12 @@ a:hover { text-decoration: underline; }
 #tags { width: 140px; margin: 20px 10px 0 0; float: left; font-size: 12px; }
 #tags li { height: 27px; margin-bottom: 1px; }
 #tags a { display: block; height: 27px; padding-left: 9px; border-radius: 3px; font-weight: bold; line-height: 27px; }
-#tags a.active, #tags a:hover { background: #343796 url('img/tag-icons.png') no-repeat 120px 6px; color: #fff; text-decoration: none; }
+#tags a.active, #tags a:hover { background: #343796 url('../img/tag-icons.png') no-repeat 120px 6px; color: #fff; text-decoration: none; }
 #tags a.active { background-position: 120px -31px; }
 #tags a.active:hover { background-position: 120px -68px; }
-#tags li:first-child { padding-bottom: 2px; border-bottom: 1px solid #ccc; margin-bottom: 2px; }
+#tags li:first-child { margin-bottom: 2px; padding-bottom: 2px; border-bottom: 1px solid #ccc; }
 #tags li:first-child a.active { background: #343796; }
-#tags span.downtick, #tags span.uptick { display: block; float: left; width: 0; height: 0; border-left: 3px solid transparent; border-right: 3px solid transparent; border-top: 3px solid #000; margin: 3px 2px; }
+#tags span.downtick, #tags span.uptick { display: block; float: left; width: 0; height: 0; margin: 3px 2px; border-left: 3px solid transparent; border-right: 3px solid transparent; border-top: 3px solid #000; }
 #tags span.uptick { border-left: 3px solid transparent; border-right: 3px solid transparent; border-bottom: 3px solid #000; border-top: 0; margin: 3px 2px; }
 #tags span.tickbox { display: block; float: left; height: 9px; width: 10px; margin: 8px 4px 0 0; border: 1px solid #999; }
 #tags a.more { color: #333; font-size: 11px; }
@@ -125,7 +124,7 @@ a:hover { text-decoration: underline; }
 #pagination { margin-top: 13px; }
 #pagination li { float: left; }
 #pagination a { padding: 4px 7px; font-size: 11px; font-weight: bold; }
-#pagination a:hover {background: #4f53a9; color: #fff; text-decoration: none; }
+#pagination a:hover { background: #4f53a9; color: #fff; text-decoration: none; }
 #pagination a.current { background: #ddd; color: #000; }
 
 .body { min-height: 600px; width: 600px; padding: 0 20px; float: left; border-left: 1px solid #ccc; border-right: 1px solid #ccc; }
@@ -144,16 +143,15 @@ a:hover { text-decoration: underline; }
 
 .detail ul { margin: -5px 0 15px; overflow: hidden; }
 .detail ul.tags { margin: 30px 0 0; }
-.detail ul.tags li { background: url('img/icons.png') no-repeat 0 1px; }
+.detail ul.tags li { background: url('../img/icons.png') no-repeat 0 1px; }
 .detail li { float: left; width: 178px; padding-left: 22px; height: 40px; line-height: 16px; }
-.detail .date { background: url('img/icons.png') no-repeat 0 -62px; }
-.detail .loc { background: url('img/icons.png') no-repeat 0 -124px; }
-.detail .price { background: url('img/icons.png') no-repeat 0 -186px; }
+.detail .date { background: url('../img/icons.png') no-repeat 0 -62px; }
+.detail .loc { background: url('../img/icons.png') no-repeat 0 -124px; }
+.detail .price { background: url('../img/icons.png') no-repeat 0 -186px; }
 
-.body h1 { font-size: 20px; font-weight: bold; margin: 25px 0; }
+.body h1 { margin: 25px 0; font-size: 20px; font-weight: bold; }
 .small { color: #999; font-size: 11px; }
 
-form {  }
 p input.text { margin-top: 5px;}
 p label { font-weight: 11px; font-weight: bold; }
 
@@ -166,16 +164,16 @@ input.text, textarea, form input.othertext, select { height: 18px; margin: 0 0 2
 input.wide, textarea.wide { width: 400px; }
 input.othertext { height: 14px; margin-left: 7px; width: 200px; }
 input.file { margin-top: 8px; }
-input.date { background: #f9f9f9 url('img/calendar.png') no-repeat 131px 8px; width: 140px; }
+input.date { background: #f9f9f9 url('../img/calendar.png') no-repeat 131px 8px; width: 140px; }
 select { height: 32px; width: 100px; margin-left: 8px; background: #fff; border-radius: 0px; font-size: 12px; vertical-align: top; }
 textarea { height: 75px; }
 
-form .addevent { font-size: 11px; font-weight: bold; margin: -2px 0 0 5px; }
+form .addevent { margin: -2px 0 0 5px; font-size: 11px; font-weight: bold; }
 form .forgot { padding-left: 7px; font-size: 11px; }
 form .password { font-size: 16px; }
 form .remember { margin: 0 0 10px; }
-form .remember label { color: #4c4c4c; font-size: 11px; font-weight: normal; margin-left: 2px; }
-form .description { font-size: 11px; color: #999; }
+form .remember label { margin-left: 2px; color: #4c4c4c; font-size: 11px; font-weight: normal; }
+form .description { color: #999; font-size: 11px; }
 
 .button { color: #fff; cursor: pointer; background: #4f53a9; background: -moz-linear-gradient(top, #4f53a9 0%, #24267e 100%); background: -webkit-linear-gradient(top, #4f53a9 0%,#24267e 100%); background: -ms-linear-gradient(top, #4f53a9 0%,#24267e 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f53a9', endColorstr='#24267e',GradientType=0 ); background: linear-gradient(top, #4f53a9 0%,#24267e 100%); box-shadow: 1px 2px 0 #d9d9d9; text-shadow: 1px 1px 0 #000; border-top: 1px solid #8183bf; border-left: 1px solid #5a5caa; border-right: 1px solid #242669; border-bottom: 1px solid #171949; -moz-border-radius: 5px; border-radius: 5px; height: 35px; margin-top: 30px; padding: 0 20px; font-size: 13px; }
 .button.close { margin-top: 0; }
@@ -183,12 +181,12 @@ form .description { font-size: 11px; color: #999; }
 .button:active { background: #494da0;	}
 .button.page { width: 90px; }
 
-#ads { width: 125px; overflow: hidden; padding: 20px 0 0 11px; }
+#ads { width: 125px; padding: 20px 0 0 11px; overflow: hidden; }
 #ads p { margin-bottom: 10px; color: #999; font-size: 11px; }
-#ads li { height: 125px; width: 125px; float: left; margin: 0 0 10px; background: #d9d9d9; }
+#ads li { height: 125px; width: 125px; margin: 0 0 10px; float: left; background: #d9d9d9; }
 
 #footer { height: 56px; width: 100%; margin: 0 auto; background: #eee; line-height: 57px; font-size: 12px; font-weight: bold; }
-#footer p { float: left; color: #797979; padding-left: 9px; }
+#footer p { float: left; padding-left: 9px; color: #797979; }
 #footer li { float: left; padding-left: 15px; }
 #footer a { color: #343796; }
 
@@ -203,19 +201,19 @@ form .description { font-size: 11px; color: #999; }
   width: 100%;
 }
 .newcal-month-left {
-    padding: 10px;
-    text-align: left;
+	padding: 10px;
+	text-align: left;
 }
 .newcal-day-head {
   text-align: center;
 }
 .newcal-month-right {
-    padding: 10px;
-    text-align: right;
+	padding: 10px;
+	text-align: right;
 }
 .newcal-month {
-    text-align: center;
-    padding: 10px;
+	text-align: center;
+	padding: 10px;
 }
 .newcal-day {
   text-align: center;
