--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -77,11 +77,11 @@ a:hover { text-decoration: underline; }
 
 #main-nav { position: absolute; top: 21px; left: 205px; float: left; }
 #main-nav li { height: 37px; width: 131px; }
-#main-nav a { display: block; height: 37px; width: 93px; padding: 0 19px; line-height: 38px; }
-#main-nav a.current { background: url('../img/nav-bg.png') no-repeat 0 0; text-shadow: 0 0 2px #babbd5; }
+#main-nav a { display: block; height: 37px; width: 131px; padding: 0 0; font-size: 14px; line-height: 38px; text-align: center; }
+#main-nav a.current { background: url('img/nav-bg.png') no-repeat 0 0; text-shadow: 0 0 2px #babbd5; }
 #main-nav a.current:hover { text-decoration: none; }
 #main-nav a.post { margin-left: 4px; }
-#main-nav a.post.current { margin: 0; padding: 0 23px; }
+#main-nav a.post.current { margin: 0; }
 
 #user-nav { position: absolute; top: 10px; right: 17px; font-size: 11px; }
 #user-nav li { padding-right: 7px; }
@@ -169,7 +169,7 @@ select { height: 32px; width: 100px; margin-left: 8px; background: #fff; border-
 textarea { height: 75px; }
 
 form .addevent { margin: -2px 0 0 5px; font-size: 11px; font-weight: bold; }
-form .forgot { padding-left: 7px; font-size: 11px; }
+form .forgot { padding-left: 3px; margin: 4px; font-size: 11px; }
 form .password { font-size: 16px; }
 form .remember { margin: 0 0 10px; }
 form .remember label { margin-left: 2px; color: #4c4c4c; font-size: 11px; font-weight: normal; }
