--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -77,7 +77,7 @@ a:hover { text-decoration: underline; }
 
 #main-nav { position: absolute; top: 21px; left: 205px; float: left; }
 #main-nav li { height: 37px; width: 131px; }
-#main-nav a { display: block; height: 37px; width: 131px; padding: 0 0; font-size: 14px; line-height: 38px; text-align: center; }
+#main-nav a { display: block; height: 37px; width: 131px; padding: 0 0; line-height: 38px; text-align: center; }
 #main-nav a.current { background: url('img/nav-bg.png') no-repeat 0 0; text-shadow: 0 0 2px #babbd5; }
 #main-nav a.current:hover { text-decoration: none; }
 #main-nav a.post { margin-left: 4px; }
