--- a/alpha/citi_user/templates/registration/registration_form.html
+++ b/alpha/citi_user/templates/registration/registration_form.html
@@ -6,14 +6,24 @@
     <form class="register-login" method="post">
       {% csrf_token %}
       <p>
+	{{ form.username.errors }}
+	<label for="{{ form.username.label }}">Username<br>
+	{{ form.username }}
+      </p>
+      <p>
 	{{ form.email.errors }}
 	<label for="{{ form.email.label }}">Email<br>
 	{{ form.email }}
       </p>
       <p>
-	{{ form.password.errors }}
-	<label for="{{ form.password.label }}">Password<br>
-	{{ form.password }}
+	{{ form.password1.errors }}
+	<label for="{{ form.password1.label }}">Password<br>
+	{{ form.password1 }}
+      </p>
+      <p>
+	{{ form.password2.errors }}
+	<label for="{{ form.password2.label }}">Password (again)<br>
+	{{ form.password2 }}
       </p>
      
       <input type="submit" class="submit button close" value="Register">      
