--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -191,35 +191,45 @@ form .description { color: #999; font-size: 11px; }
 #footer a { color: #343796; }
 
 .newcal-date-popup {
-  background: #eee;
-  width: 350px;
+  background: #fff;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  width: 200px;
   -moz-box-shadow: 2px 2px 5px #888;
   -webkit-box-shadow: 2px 2px 5px #888;
   box-shadow: 2px 2px 5px #888;
 }
 .newcal-table {
   width: 100%;
+  border-spacing: 2px;
+  border-collapse: separate;
 }
+
+.newcal-header {
+  /* background: #f00; */
+}
+
 .newcal-month-left {
-	padding: 10px;
-	text-align: left;
+  padding: 5px;
+  text-align: left;
 }
 .newcal-day-head {
   text-align: center;
 }
 .newcal-month-right {
-	padding: 10px;
-	text-align: right;
+  padding: 5px;
+  text-align: right;
 }
 .newcal-month {
-	text-align: center;
-	padding: 10px;
+  text-align: center;
+  padding: 5px;
 }
 .newcal-day {
   text-align: center;
-  padding: 9px;
-  width: 30px;
-  margin: 10px;
+  padding: 5px;
+  border: 1px solid #343796;
+/*  width: 30px; */
 }
 .newcal-day:hover {
   background: #ddf;
