--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -172,6 +172,8 @@ form .password { font-size: 16px; }
 form .remember { margin: 0 0 10px; }
 form .remember label { margin-left: 2px; color: #4c4c4c; font-size: 11px; font-weight: normal; }
 form .description { color: #999; font-size: 11px; }
+form input.error { border: 3px solid red; }
+form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 
 .button { color: #fff; cursor: pointer; background: #4f53a9; background: -moz-linear-gradient(top, #4f53a9 0%, #24267e 100%); background: -webkit-linear-gradient(top, #4f53a9 0%,#24267e 100%); background: -ms-linear-gradient(top, #4f53a9 0%,#24267e 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f53a9', endColorstr='#24267e',GradientType=0 ); background: linear-gradient(top, #4f53a9 0%,#24267e 100%); box-shadow: 1px 2px 0 #d9d9d9; text-shadow: 1px 1px 0 #000; border-top: 1px solid #8183bf; border-left: 1px solid #5a5caa; border-right: 1px solid #242669; border-bottom: 1px solid #171949; -moz-border-radius: 5px; border-radius: 5px; height: 35px; margin-top: 30px; padding: 0 20px; font-size: 13px; }
 .button.close { margin-top: 0; }
