--- a/alpha/event/templates/events/event_description.html
+++ b/alpha/event/templates/events/event_description.html
@@ -3,7 +3,7 @@
 {% block content %}
 <aside id="photo">
   {% load event_pictures %}
-  <img src="{% event_picture_url event 350 %}" width="250" height="350">
+  <img src="{% event_picture_url event 250 %}">
 </aside>
 
 <section class="body noborder detail">
