--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -138,6 +138,7 @@ a:hover { text-decoration: underline; }
 .events li a { position: absolute; top: 0; left: 45px; padding: 5px; font-weight: bold; }
 .events li ul { position: absolute; left: 50px; top: 20px; }
 .events li li { float: left; margin: 5px 10px 0 0; padding: 0; height: 15px; font-size: 12px; }
+.events li a.edit { top: 39px; font-size: 11px; }
 
 .detail ul { margin: -5px 0 15px; overflow: hidden; }
 .detail ul.tags { margin: 30px 0 0; }
