basics of time picker

--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -30,4 +30,30 @@
       </ul>
     </form>
   </section><!-- .body -->
+  
+  <div id="newtime" class="newtime-frame" style="position: absolute; top: 200px; left:
+			   200px; ">
+    <div class="newtime-header">
+      Header
+    </div>
+    <ul class="newtime-hours">
+      <li>12</li>
+      <li>1</li>
+      <li class="newtime-active">2</li>
+      <li>3</li>
+      <li>4</li>
+    </ul>
+    <ul class="newtime-minutes">
+      <li>00</li>
+      <li>05</li>
+      <li>10</li>
+      <li>15</li>
+      <li class="newtime-active">20</li>
+    </ul>
+    <ul class="newtime-period">
+      <li>AM</li>
+      <li>PM</li>
+    </ul>
+    <div class="newtime-footer"></div>
+  </div>
 {% endblock %}
