--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -255,3 +255,12 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
   background: #ebc964;
   border-color: #d7ad33;
 }
+
+.newtime-frame { background: #fee; }
+.newtime-header { background: #fdd; }
+.newtime-frame li { line-height: 20px; padding-left: 10px; padding-right: 10px; }
+.newtime-frame li.newtime-active { background: #f00; }
+.newtime-hours { float: left; text-align: right; }
+.newtime-minutes { float: left; text-align: center; }
+.newtime-period { float: left; text-align: left; }
+.newtime-footer { clear: both; }
