--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -25,6 +25,7 @@
   <script src="{{ STATIC_URL }}js/libs/sprintf-0.7-beta1.js"></script>
   <script src="{{ STATIC_URL }}js/libs/newcal.js"></script>
   <script>$('.jump').newcal({ onClick: window.jumpToDate });</script>
+  <script>$('.date').newtime();</script>
   <script src="{{ STATIC_URL }}js/plugins.js"></script>
   <script src="{{ STATIC_URL }}js/script.js"></script>
 
