bring over style from experimental newcal

--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -200,7 +200,7 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  width: 200px;
+/*  width: 200px; */
   -moz-box-shadow: 2px 2px 5px #888;
   -webkit-box-shadow: 2px 2px 5px #888;
   box-shadow: 2px 2px 5px #888;
@@ -256,11 +256,26 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
   border-color: #d7ad33;
 }
 
-.newtime-frame { background: #fee; }
+.newtime-frame { 
+  background: #eee; 
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#eeeeee'); /* for IE */
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eee)); /* for webkit browsers */
+  background: -moz-linear-gradient(top,  #fff,  #eee); /* for firefox 3.6+ */ 
+
+  border: 1px solid #ddd;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+/*  width: 200px; */
+  -moz-box-shadow: 2px 2px 5px #888;
+  -webkit-box-shadow: 2px 2px 5px #888;
+  box-shadow: 2px 2px 5px #888;
+}
 .newtime-header { background: #fdd; line-height: 32px; font-size: 14px; text-align: center; }
-.newtime-frame li { line-height: 20px; padding-left: 10px; padding-right: 10px; cursor: pointer; }
-.newtime-frame li.newtime-active { background: #f00; }
-.newtime-frame ul { margin: 1px; }
+.newtime-frame li { float: none; line-height: 20px; padding-left: 10px; padding-right: 10px; cursor: pointer; border: 1px solid #343796; padding: 5px; margin: 2px; background: #f7f8ff; }
+.newtime-frame li:hover { background: #ebc964; border-color: #d7ad37; }
+.newtime-frame li.newtime-active { background: #f00;  }
+.newtime-frame ul { margin: 1px; list-style: none; padding: 0; margin: 0; }
 .newtime-hours { float: left; text-align: right; }
 .newtime-minutes { float: left; text-align: center; }
 .newtime-period { float: left; text-align: left; }
