--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -24,9 +24,14 @@
   <script>window.jQuery || document.write("<script src='{{ STATIC_URL }}js/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>
   <script src="{{ STATIC_URL }}js/libs/sprintf-0.7-beta1.js"></script>
   <script src="{{ STATIC_URL }}js/libs/newcal.js"></script>
-  <script>$('.jump').newcal({ onClick: window.jumpToDate });</script>
-  <script>$('.date').newtime();</script>
-  <script src="{{ STATIC_URL }}js/plugins.js"></script>
+  <script>
+    $('.jump').newcal({ onClick: window.jumpToDate });
+    $('#id_start_time_0').newcal({ onClick: $.newcal_input_callback });
+    $('#id_start_time_1').newtime();
+    $('#id_end_time_0').newcal({ onClick: $.newcal_input_callback });
+    $('#id_end_time_1').newtime();
+ </script>
+ <script src="{{ STATIC_URL }}js/plugins.js"></script>
   <script src="{{ STATIC_URL }}js/script.js"></script>
 
   <script>
