--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -163,6 +163,7 @@ input.wide, textarea.wide { width: 400px; }
 input.othertext { height: 14px; margin-left: 7px; width: 200px; }
 input.file { margin-top: 8px; }
 input.date { background: #f9f9f9 url('../img/calendar.png') no-repeat 151px 8px; width: 160px; }
+input.time { background: #f9f9f9 url('../img/calendar.png') no-repeat 151px 8px; width: 160px; }
 select { height: 32px; width: 100px; margin-left: 8px; background: #fff; border-radius: 0px; font-size: 12px; vertical-align: top; }
 textarea { height: 75px; }
 
