branch merge, 404 error messaging

--- a/alpha/home/templates/404.html
+++ b/alpha/home/templates/404.html
@@ -3,8 +3,8 @@
 {% block page %}
 <div id="main">
   <header>
-    <h1>Uhoh! Page not found</h1>
-    <p>Sorry about that</p>
+    <h1>Uh oh! Page not found.</h1>
+    <p>Sorry about that.</p>
   </header>
 </div>
 {% endblock %}
