--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -32,7 +32,7 @@
     $('#id_end_time_1').newtime();
  </script>
  <script src="{{ STATIC_URL }}js/plugins.js"></script>
-  <script src="{{ STATIC_URL }}js/script.js"></script>
+  <script src="{{ STATIC_URL }}js/scripts.js"></script>
 
   <script>
     var _gaq=[["_setAccount","UA-XXXXX-X"],["_trackPageview"]];
