--- a/alpha/home/templates/footer.html
+++ b/alpha/home/templates/footer.html
@@ -1,6 +1,6 @@
 <footer id="footer">
   <div class="wrapper">
-    <p>&copy; Cityfusion 2010.</p>
+    <p>&copy; Cityfusion {% now "Y" %}.</p>
     <nav>
       <ul>
 	<li><a href="{% url feedback %}">Feedback</a></li>
