--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -11,10 +11,10 @@
 	<li class="label">{{ form.name.label_tag }}</li><li>{{ form.name }}</li><li id="name-info">{% for error in form.name.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
 	<li class="label">{{ form.location.label_tag }}</li><li>{{ form.location }}</li><li id="location-info">{% for error in form.location.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
 	<li class="label">{{ form.start_time.label_tag }}</li><li>{{ form.start_time }}
-	  <a href="" class="addevent">+ Add end time</a></li>
-	<li id="when-info"></li>
-	<li class="label"></li><li>{{ form.end_time }}
-	  <a href="" class="addevent">- Remove end time</a></li>
+	  <a href="" class="addevent" id="addevent">+ Add end time</a></li>
+	<li id="when-info">{% for error in form.start_time.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
+	<li class="label end_time"></li><li class="end_time">{{ form.end_time }}
+	  <a href="" id="remove_time" class="addevent">- Remove end time</a></li>
 	<li class="label">
 	  <label for="{{ form.description.html_name }}">{{ form.description.label }}</label>
 	  <span class="description">Optional</span>
