--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -169,6 +169,7 @@ select { height: 32px; width: 100px; margin-left: 8px; background: #fff; border-
 textarea { height: 75px; }
 
 form .addevent { margin: -2px 0 0 5px; font-size: 11px; font-weight: bold; }
+form .end_time { display: none; }
 form .forgot { padding-left: 3px; margin: 4px; font-size: 11px; }
 form .password { font-size: 16px; }
 form .remember { margin: 0 0 10px; }
