--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -19,10 +19,12 @@
 	  <label for="{{ form.description.html_name }}">{{ form.description.label }}</label>
 	  <span class="description">Optional</span>
 	</li><li>{{ form.description }}</li><li id="description-info">{% for error in form.description.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
-	<li class="label">Tags</li>
+	<li class="label">Tags
+	  <label for="{{ form.tags.label_html}}"><span class="small">e.g Sports,Free</span> </label>
+	</li>
 	<li>
 	  <ul>
-	    <li class="other">{# <label for="{{ form.tags.label_html}}">Tags <span class="small">(Specify)</span> </label>#}{{ form.tags }}</li>
+	    <li class="other">{{ form.tags }}</li>
 	  </ul>
 	</li>
 	<li class="label">{{ form.picture.label_tag }}</li><li>{{ form.picture }}</li><li id="image-info">{% for error in form.username.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
