--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -174,7 +174,7 @@ form .forgot { padding-left: 3px; margin: 4px; font-size: 11px; }
 form .password { font-size: 16px; }
 form .remember { margin: 0 0 10px; }
 form .remember label { margin-left: 2px; color: #4c4c4c; font-size: 11px; font-weight: normal; }
-form .description { color: #999; font-size: 11px; }
+form .description { display: block; margin-top: 5px; color: #999; font-size: 11px; }
 form input.error { border: 3px solid red; }
 form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 
