--- a/alpha/home/templates/home.html
+++ b/alpha/home/templates/home.html
@@ -8,6 +8,8 @@
 
 <div id="main">
   {% block content %}{% endblock %}
+  {% if show_ads %}
   {% include 'ads.html' %}
+  {% endif %}
 </div>
 {% endblock %}
