--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -18,7 +18,17 @@
     {% block page %}
     {% endblock %}
   </div> 
-  {% include 'footer.html' %}
+	<footer id="footer">
+	  <div class="wrapper">
+	    <p>&copy; Cityfusion {% now "Y" %}.</p>
+	    <nav>
+	      <ul>
+		<li><a href="{% url feedback %}">Feedback</a></li>
+	      </ul>
+	    </nav>
+	  </div>
+	</footer>
+
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
   <script>window.jQuery || document.write("<script src='{{ STATIC_URL }}js/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>
@@ -40,6 +50,23 @@
     g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
     s.parentNode.insertBefore(g,s)}(document,"script"));
   </script>
-
+  
+	<script type="text/javascript" charset="utf-8">
+	  var is_ssl = ("https:" == document.location.protocol);
+	  var asset_host = is_ssl ? "https://s3.amazonaws.com/getsatisfaction.com/" : "http://s3.amazonaws.com/getsatisfaction.com/";
+	  document.write(unescape("%3Cscript src='" + asset_host + "javascripts/feedback-v2.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	
+	<script type="text/javascript" charset="utf-8">
+	  var feedback_widget_options = {};
+	
+	  feedback_widget_options.display = "overlay";  
+	  feedback_widget_options.company = "cityfusion";
+	  feedback_widget_options.placement = "bottom";
+	  feedback_widget_options.color = "#f4660d";
+	  feedback_widget_options.style = "idea";
+	  
+	  var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
+	</script>
 </body>
 </html>
