--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -17,7 +17,7 @@
 	  <a href="" class="addevent" id="addevent">+ Add end time</a></li>
 	<li id="when-info">{% for error in form.start_time.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
 	
-	<li class="label end_time"></li><li class="end_time">{{ form.end_time }}
+	<li class="label end_time">{{ form.end_time.label_tag }}</li><li class="end_time">{{ form.end_time }}
 	  <a href="" id="remove_time" class="addevent">- Remove end time</a></li>
 	
 	<li class="label">
