--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -10,7 +10,8 @@
 	{% if form.email %}<li class="label">{{ form.email.label_tag }}</li><li>{{ form.email }}</li><li id="email-info">{% for error in form.email.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>{% endif %}
 	
 	<li class="label">{{ form.name.label_tag }}</li><li>{{ form.name }}</li><li id="name-info">{% for error in form.name.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
-	
+
+
 	<li class="label">{{ form.location.label_tag }}</li><li>{{ form.location }}</li><li id="location-info">{% for error in form.location.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
 	
 	<li class="label">{{ form.start_time.label_tag }}</li><li>{{ form.start_time }}
@@ -19,7 +20,7 @@
 	
 	<li class="label end_time">{{ form.end_time.label_tag }}</li><li class="end_time">{{ form.end_time }}
 	  <a href="" id="remove_time" class="addevent">- Remove end time</a></li>
-	
+	<li class="label">{{ form.price.label_tag }}<span class="description">Optional</span></li><li>{{ form.price }}</li><li id="price-info">{% for error in form.price.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>	
 	<li class="label">
 	  <label for="{{ form.description.html_name }}">{{ form.description.label }}<span class="description">Optional</span></label>
 	</li><li>{{ form.description }}</li><li id="description-info">{% for error in form.description.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
