--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -63,7 +63,7 @@
 	  feedback_widget_options.display = "overlay";  
 	  feedback_widget_options.company = "cityfusion";
 	  feedback_widget_options.placement = "bottom";
-	  feedback_widget_options.color = "#3d409d";
+	  feedback_widget_options.color = "#343796";
 	  feedback_widget_options.style = "idea";
 	  
 	  var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
