feedback link added in city widget too

--- a/alpha/home/templates/header.html
+++ b/alpha/home/templates/header.html
@@ -30,7 +30,7 @@
 
 <aside id="city-widget">
   <p>Cityfusion is currently only available in Saskatoon, Canada.</p>
-  <p><span class="white">Want your city to be next?</span><br><a href="{% url feedback %}">Let us know.</a></p>
+  <p><span class="white">Want your city to be next?</span><br><a href="#" onclick="feedback_widget.show(); return false;">Let us know.</a></p>
 </aside>
 
 {% if browsing %}
